# pfcrender

./: .gitignore  .gitmodules  .travis.yml  Appendix.tex  Aussenetikett.tex  Befehle.tex  Bibliography.bib  CLIOptions_8h.html  CLIOptions_8h.js  CLIParser_8cpp.html  CLIParser_8h.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  Config__Registry_8cpp.html  Config__Registry_8h.html  Content.tex  Deckblatt.tex  Erklaerung.tex  Export_8h.html  Import_8h.html  Inhalt.tex  LSYSModelFactory_8cpp.html  LSYSModelFactory_8h.html  LSYSModelImpl_8cpp.html  LSYSModelImpl_8h.html  LSYSModel_8h.html  LSYS_2plugin__LSYS__autogen_2SFGGB2HW73_2moc__Plugin_8cpp.html  LSYS_2plugin__LSYS__autogen_2SFGGB2HW73_2moc__Plugin_8cpp.js  LSYS_8cpp.html  LSYS_8h.html  Masterarbeit.tex  Meta.tex  ModelStringBuilder_8h.html  ModelStringParser_8h.html  ModelStringParser_8h.js  ModifyModel_8h.html  ModifyVM_8h.html  PDF_2BboxParse_8cpp.html  PDF_2BboxParse_8h.html  PDF_2QPainterParse_8cpp.html  (+514 more)
Bilder/: SVGexport-tex.pdf_tex
Content/: Abstract.tex  Appendix.tex  ArchitectureSpec.tex  BilderListings.tex  Implementation.tex  Intro.tex  Introduction.tex  Performance.tex  Research.tex  Summary.tex  bibliography.txt  glossary-definitions.tex
Inhalt/: AufzaehlungenTabellen.tex  BPELAktivitaeten.tex  Einleitung.tex  Theorie.tex  ZitateReferenzen.tex
Ressourcen/: pfcrender_uml.asta
conf/: README.md.in  appveyor.yml.in
doc/: CMakeLists.txt  Doxyfile.in  deploy-doxygen-to-gh-pages.sh
lib/: CMakeLists.txt
lib/fxt/: CMakeLists.txt
src/: Builder.cpp  Builder.h  CMakeLists.txt  LSYS.cpp  LSYS.h  PFCRender.cpp  PFCRender.h  PFCStart.cpp  PFCStart.h  PFCmodel.h  projectinfo.h.in
src/CLI/: CLIParser.cpp  CLIParser.h  PFCRender.cpp  PFCRender.h
src/Common/: CLIOptions.h  CLIParser.cpp  CLIParser.h  Config_Registry.cpp  Config_Registry.h  Plugin_Registry.cpp  Plugin_Registry.h  Sequence_Walker.cpp  Sequence_Walker.h
src/Export/: Exporter.cpp  Exporter.h  PDFExporter.cpp  PDFExporter.h  PNGExporter.cpp  PNGExporter.h  SVGExporter.cpp  SVGExporter.h
src/GUI/: Builder.cpp  Builder.h  GUIBuilder.cpp  GUIBuilder.h  PFCRender.cpp  PFCRender.h  PFCmodel.cpp  PFCmodel.h
src/Model/: CMakeLists.txt  Curve.cpp  Curve.h  CustomGeometryModel.cpp  CustomGeometryModel.h  GridModel.cpp  GridModel.h  LSYSModel.cpp  LSYSModel.h  LSYSModelImpl.cpp  LSYSModelImpl.h  Model.cpp  Model.h  ModelFactory.h  ModelStringBuilder.h  ModelStringParser.h  PFCModel.cpp  PFCModel.h  PFCmodel.cpp  PFCmodel.h
src/Plugin/: CMakeLists.txt  Import.h  Importer_.cpp  Importer_.h  Plugin.cpp  Plugin.h  Plugin_Registry.cpp  Plugin_Registry.h
src/Plugin/LSYS/: CMakeLists.txt  LSYS.cpp  LSYS.h
src/Plugin/LSYS/fxt/: stringsubst.cc
src/Plugins/: CMakeLists.txt  Export.h  Import.h  ModifyModel.h  ModifyVM.h  Plugin.cpp  Plugin.h  Plugin_Registry.cpp  Plugin_Registry.h
src/Plugins/LSYS/: CMakeLists.txt  Guiconfig.qml  GuiconfigForm.ui.qml  LSYS.cpp  LSYS.h  LSYSConfig.qml  LSYSConfigForm.ui.qml  LSYSModelFactory.cpp  LSYSModelFactory.h  PFCModel.cpp  PFCModel.h  Test_LSYS.cpp  qml.qrc
src/Plugins/PDF/: BboxParse.cpp  BboxParse.h  CMakeLists.txt  QPainterParse.cpp  QPainterParse.h  pdf.cpp  pdf.h  test_PDF.cpp  test_pdf.cpp
src/Plugins/STDOUT/: CMakeLists.txt  stdout.cpp  stdout.h  test_STDOUT.cpp  test_stdout.cpp
src/Plugins/SVG/: BboxParse.h  CMakeLists.txt  QPainterParse.cpp  QPainterParse.h  SVG.cpp  SVG.h  Test_SVG.cpp
src/QtCLI/: PFCRender.cpp  PFCRender.h  PFCRenderCLI.cpp  PFCRenderCLI.h
src/QtGUI/: CreatePFC.qml  CreatePFCForm.ui.qml  CustomGeometryModel.cpp  CustomGeometryModel.h  GUIBuilder.cpp  GUIBuilder.h  HelloWorld.qml  ModelFormatConfig.qml  ModelFormatConfigForm.ui.qml  ModelView.qml  NanoCustomGeometryModel.cpp  NanoCustomGeometryModel.h  NanoViewModelBuilder.cpp  NanoViewModelBuilder.h  PFCRender.cpp  PFCRender.h  PFCRenderGUI.cpp  PFCRenderGUI.h  QNanoCurvePainter.cpp  QNanoCurvePainter.h  QNanoPaintedCurve.cpp  QNanoPaintedCurve.h  QNanoPainterParse.cpp  QNanoPainterParse.h  ViewModelBuilder.cpp  ViewModelBuilder.h  main.qml  qml.qrc
src/ViewModel/: CustomGeometryModel.cpp  CustomGeometryModel.h  ModelStringParser.cpp  ModelStringParser.h  ViewModelBuilder.cpp  ViewModelBuilder.h  ViewModelFactory.cpp  ViewModelFactory.h
src/util/: PolarVector2D.h  constexprstring.h
svg-inkscape/: SVGexport_svg-tex.pdf_tex
test/: CMakeLists.txt  Test.cpp  Test_CLI.cpp  Test_GUI.cpp  test.asta
